modified html and css files to fix mistakes

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
             <section id="Main-Section" class="container">
                 <h1>About Me</h1>
                 <img src="assets/images/Basic-Portfolio Pic.jpeg" class="auth-image" alt="Turan Ketene" style="width: 200px">
-                <p>Born in Canada, raised in Turkey, living in the US. After moving so many times earlier on in my life, 
-                    I've finally settled in Seattle, having lived here for over 10 years now. </p>
+                <p>Born in Canada, raised in Turkey, living in the US. After moving so many times during the early years of my life, 
+                    I've managed to stay in Seattle the longest, and consider myself a proper Washingtonian. </p>
                 <p>I went into college with an initial desire to study medicine, and following this desire I got my bachelor's in Physiology and graduated in 2016. 
                     After graduating, I had a couple of jobs in healthcare, and I currently work at a dialysis center as a technician. After realizing medicine 
-                    isn't the path I want to pursue, I decided to go for a career change and go for coding!</p>
-                <p>My hobbies are playing basketball, soccer, football, lifting weights, along with hiking and watching tv shows!</p>
+                    isn't the path I want to pursue, I decided to go for a career change to see what the tech industry has got in store for me!</p>
+                <p>I'm a chill dude who loves sports, especially basketball, soccer, and football. Hiking and voleyball are my go to activities in the summer time, and watching tv shows is all year hobbie of mine.
+                    If you have any good recommendations for tv shows let me know!
+                </p>
 
 
 
