--- a/portfolio.html
+++ b/portfolio.html
@@ -25,28 +25,28 @@
 
             <section id="Main-Section" class="container">
                 <h1>Portfolio</h1>
-                <div id="pp">
-                    <img src="assets/images/pic-1.jpeg" alt="Portfolio pic 1" style="width: 200px">
+                <div class="pp">
+                    <img src="assets/images/pic-1.jpeg" class="port" alt="Portfolio pic 1" style="width: 200px">
                     <h3>Hangman</h3>
                 </div>
 
-                <div id="pp">
-                    <img src="assets/images/pic-2.jpeg" alt="Portfolio pic 2" style="width: 200px">
+                <div class="pp">
+                    <img src="assets/images/pic-2.jpeg" class="port" alt="Portfolio pic 2" style="width: 200px">
                     <h3>RPG Game</h3>
                 </div>
 
-                <div id="pp">
-                    <img src="assets/images/pic-3.jpeg" alt="Portfolio pic 3" style="width: 200px">
+                <div class="pp">
+                    <img src="assets/images/pic-3.jpeg" class="port" alt="Portfolio pic 3" style="width: 200px">
                     <h3>Trivia Game</h3>
                 </div>
 
-                <div id="pp">
-                    <img src="assets/images/pic-4.jpeg" alt="Portfolio pic 4" style="width: 200px">
+                <div class="pp">
+                    <img src="assets/images/pic-4.jpeg" class="port" alt="Portfolio pic 4" style="width: 200px">
                     <h3>Rutgers Info Widget</h3>
                 </div>
 
-                <div id="pp">
-                    <img src="assets/images/pic-5.jpeg" alt="Portfolio pic 5" style="width: 200px">
+                <div class="pp">
+                    <img src="assets/images/pic-5.jpeg" class="port" alt="Portfolio pic 5" style="width: 200px">
                     <h3>Rock Paper Scissors</h3>
                 </div>
                
