Fixed some html errors as pointed out by the html validator

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <section id="Main-Section" class="container">
                 <h1>About Me</h1>
-                <img src="assets/images/Basic-Portfolio Pic.jpeg" class="auth-image" alt="Turan Ketene" style="width: 200px">
+                <img src="assets/images/Basic-Portfolio-Pic.jpeg" class="auth-image" alt="Turan Ketene" style="width: 200px">
                 <p>Born in Canada, raised in Turkey, living in the US. After moving so many times during the early years of my life, 
                     I've managed to stay in Seattle the longest, and consider myself a proper Washingtonian. </p>
                 <p>I went into college with an initial desire to study medicine, and following this desire I got my bachelor's in Physiology and graduated in 2016. 
@@ -36,7 +36,7 @@
 
             </section>
             <footer>
-                Copyright &#169
+                Copyright &#169;
             </footer>
            
 
