--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
             </section>
             
             <footer>
-                    Copyright &#169
+                    Copyright &#169;
             </footer>
            
 
