--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
 
             </section>
             <footer>
-                    Copyright &#169
+                    Copyright &#169;
             </footer>
            
 
